fixed issue where header would overflow on very small screen sizes

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 .header {
     background-color: rgb(94, 11, 145);
     text-align: center;
-    font-size: 24px;
+    font-size: min(max(1rem, 6vw), 24px);
     line-height: 60px;
 }
 
